[package]
name = "bit_roles"
version = "0.2.1"
edition = "2021"
authors = ["zignis <velociraptorm77@gmail.com>"]
license = "MIT"
description = "Granular role management based on bit flags"
keywords = ["bit", "enum", "permissions", "roles", "macros"]
documentation = "https://docs.rs/bit_roles"
homepage = "https://github.com/zignis/bit-roles"
repository = "https://github.com/zignis/bit-roles"
readme = "../README.md"

[dependencies]
thiserror = "1.0.58"
bit_roles_macros = { path = "../bit_roles_macros", version = "0.2.1" }