[package]
name = "bit_roles_macros"
version = "0.2.0"
edition = "2021"
authors = ["zignis <velociraptorm77@gmail.com>"]
license = "MIT"
description = "Granular role management based on bit flags"
keywords = ["bit", "enum", "permissions", "roles", "macros"]
documentation = "https://docs.rs/bit_roles"
homepage = "https://github.com/zignis/bit_roles"
repository = "https://github.com/zignis/bit_roles"
readme = "../README.md"

[lib]
proc-macro = true
name = "bit_roles_macros"

[dependencies]
proc-macro2 = "1.0.79"
quote = "1.0.35"
syn = "2.0.58"

[dev-dependencies]
bit_roles = { path = "../bit_roles" }
